Bug 125868 - RTL Insert Cell shifts cells dialog text needs to indicate opposite direction
Summary: RTL Insert Cell shifts cells dialog text needs to indicate opposite direction
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.5.7.2 release
Hardware: All All
: medium trivial
Assignee: Heiko Tietze
URL:
Whiteboard: target:7.3.0
Keywords:
Depends on:
Blocks: Cell-Management
  Show dependency treegraph
 
Reported: 2019-06-11 20:48 UTC by elicoten
Modified: 2021-06-25 08:16 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description elicoten 2019-06-11 20:48:38 UTC
Description:
Dialog option text needs to be changed for right to left spreadsheets, currently it could cause confusion as what it does (correctly) is actually opposite to what it says (but the option is mislabelled, the behaviour seems correct).

Steps to Reproduce:
1.Open/create a right to left spreadsheet (with some data in it)
2. Right click on a cell
3. Select "Insert..." 

Actual Results:
The second option on the dialog box says "Shift cells right".

Expected Results:
For right to left spreadsheets, this should actually say "Shift cells left"


Reproducible: Always


User Profile Reset: No



Additional Info:
The functionality works correctly, shifting cells to the left - only the dialog text needs to be changed.
Comment 1 Heiko Tietze 2019-09-02 06:00:06 UTC
Shall we rename it to "Shift left/right" or make the text depending on RTL settings?
Comment 2 Thomas Lendo 2019-09-05 20:48:42 UTC
"Shift left/right" sounds like a confusing title. Better is to make it text direction dependent.
Comment 3 Heiko Tietze 2019-09-06 06:56:20 UTC
In Writer we use Left/Top, Right/Bottom for paragraph style > alignment depending on horizontal/vertical direction. The dynamic label might be not so easy to implement. How about "Shift forward" and backward for left/right?
Comment 4 Thomas Lendo 2019-09-07 00:17:26 UTC
(In reply to Heiko Tietze from comment #3)
> How about "Shift forward" and backward for left/right?
Sounds ok. Is forward to the right in LTR?
Comment 5 Heiko Tietze 2019-09-07 09:19:04 UTC
(In reply to Thomas Lendo from comment #4)
> (In reply to Heiko Tietze from comment #3)
> > How about "Shift forward" and backward for left/right?
> Sounds ok. Is forward to the right in LTR?

Would be my understanding but the drawback of not perfectly terms with forward/backward instead of left/right is clear.
Comment 6 Thomas Lendo 2019-09-09 20:55:04 UTC
The insert column commands are titled "before" and "after" and the insert rows commands are titled "above" and "below".

If used in RTL cells, the behavior also is false like the text in the 'Insert...' dialog. If something will be changed here also the 'Delete...' dialog and the above mentioned column/row commands must be taken into account.

I doubt this is technically possible? What with only partially RTL columns/rows? How could LibreOffice decide if it's LTR, RTL, whatever?

But to come to this bug report: As columns and rows commands were renamed, also the 'Delete...' and 'Insert...' dialog must be changed:

* Insert... > Shift cells right ----> Shift cells after
* Delete... > Shift cells left  ----> Shift cells before

This isn't what the bug opener wants but it would be at least the same naming than in other commands.
Comment 7 Heiko Tietze 2019-09-19 13:01:12 UTC
"Shift before"... I wouldn't understand this command. So let's not make compromises.

I'm pretty sure we can evaluate LTR/RTL and update the command label and the various captions accordingly.
Comment 8 Commit Notification 2021-06-25 08:16:52 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/0fd2012dcedc8f98b14dc478c71f9312d4c26c85

Resolves tdf#125868 - Insert dialog text in case of RTL

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.