Resolves tdf#125868 - Insert dialog text in case of RTL

Change-Id: I28725b2ec685b320fd68117109bdeaa00db55a35
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/117740
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>