sc/source/ui/miscdlgs/inscldlg.cxx
@@ -20,6 +20,9 @@
 #undef SC_DLLIMPLEMENTATION
 
 #include <inscldlg.hxx>
+#include <viewdata.hxx>
+#include <strings.hrc>
+#include <scresid.hxx>
 
 static sal_uInt8 nInsItemChecked = 0;
 
@@ -29,7 +32,12 @@ ScInsertCellDlg::ScInsertCellDlg(weld::Window* pParent, bool bDisallowCellMove)
     , m_xBtnCellsRight(m_xBuilder->weld_radio_button("right"))
     , m_xBtnInsRow(m_xBuilder->weld_radio_button("rows"))
     , m_xBtnInsCol(m_xBuilder->weld_radio_button("cols"))
+    , m_xLbCellsRight(m_xBuilder->weld_label("right"))
 {
+    const ScViewData* pViewData = ScDocShell::GetViewData();
+    if (pViewData && pViewData->GetDocument().IsLayoutRTL(pViewData->GetTabNo()))
+        m_xLbCellsRight->set_label(ScResId(SCSTR_INSERT_RTL));
+
     if (bDisallowCellMove)
     {
         m_xBtnCellsDown->set_sensitive(false);
